--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
     <string name="starter_policy">Accept our privacy policy to start.</string>
     <string name="starter_btn_accept">Accept and start</string>
     <string name="starter_btn_privacy_legal">Privacy and Legal</string>
+    <string name="all_feedback">Feedback</string>
+    <string name="feedback_dialog_title">Send Feedback</string>
+    <string name="feedback_dialog_contents">You will be redirected to your email app to send feedback.</string>
+    <string name="all_ok">OK</string>
+    <string name="all_cancel">Cancel</string>
 </resources>
