--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="feedback_dialog_contents">You will be redirected to your email app to send feedback.</string>
     <string name="all_ok">OK</string>
     <string name="all_cancel">Cancel</string>
+    <string name="dialog_points_message">You will get 10 points for every right guess, and minus 3 points (per round) if you either skip a street, make a wrong guess, or view the solution.</string>
 </resources>
