--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,12 @@
     <string name="title_activity_districts">Pick a district</string>
     <string name="districts_city_title">%s (All)</string>
     <string name="quiz_result_success_1">Well done!</string>
+    <string name="quiz_result_success_2">Correct!</string>
+    <string name="quiz_result_success_3">That\'s right!</string>
+    <string name="quiz_result_success_4">Hooray!</string>
+    <string name="quiz_result_success_5">Perfect!</string>
     <string name="quiz_result_failed_1">Oh no!</string>
+    <string name="quiz_result_failed_2">Wrong!</string>
+    <string name="quiz_result_failed_3">Unfortunately, no.</string>
+    <string name="quiz_result_failed_4">No, try again!</string>
 </resources>
